@@ -110,6 +110,16 @@ get_var_stack_offset_64(func_t *func, char *name)
 
 
 static unsigned int
+get_var_proc_offset(var_t *var)
+{
+    if (var->ptr_level == 0 && is_base_type(var->type))
+        return 2;
+
+    return 4;
+}
+
+
+static unsigned int
 get_var_type_offset(var_t *var)
 {
     unsigned int toffset = 0;
@@ -255,7 +265,7 @@ static int get_type_size(type_t *type, int alignment)
 
     default:
         error("%s:%d Unknown/unsupported type 0x%x\n",
-              __FUNCTION__,__LINE__, type->type);
+              __FILE__,__LINE__, type->type);
         return 0;
     }
 
@@ -294,7 +304,7 @@ static int get_type_alignment(type_t *type)
 
     default:
         error("%s:%d Unknown/unsupported type 0x%x\n",
-              __FUNCTION__,__LINE__, type->type);
+              __FILE__,__LINE__, type->type);
         return 0;
     }
 
@@ -359,7 +369,7 @@ static void write_procformatstring(type_t *iface)
                     else
                     {
                         error("%s:%d Unknown/unsupported type 0x%x\n",
-                              __FUNCTION__,__LINE__, var->type->type);
+                              __FILE__,__LINE__, var->type->type);
                         return;
                     }
                 }
@@ -400,7 +410,7 @@ static void write_procformatstring(type_t *iface)
         else
         {
             error("%s:%d Unknown/unsupported type 0x%x\n",
-                  __FUNCTION__,__LINE__, var->type->type);
+                  __FILE__,__LINE__, var->type->type);
             return;
         }
 
@@ -492,7 +502,7 @@ static void write_typeformatstring(type_t *iface)
                         {
 
                             error("%s:%d Unknown/unsupported type 0x%x\n",
-                                  __FUNCTION__,__LINE__, var->type->type);
+                                  __FILE__,__LINE__, var->type->type);
                             return;
                         }
                     }
@@ -592,7 +602,7 @@ static void write_typeformatstring(type_t *iface)
                                 print_server("0x%02x,          /* FC_C_WSTRING */\n", RPC_FC_C_WSTRING);
                             else
                             {
-                                error("%s: Invalid type!\n", __FUNCTION__);
+                                error("%s:%d Invalid type!\n", __FILE__, __LINE__);
                                 return;
                             }
                         }
@@ -706,7 +716,7 @@ static void print_message_buffer_size(func_t *func, unsigned int *type_offset)
 
                         default:
                             error("%s:%d Unknown/unsupported type 0x%x\n",
-                                  __FUNCTION__,__LINE__, var->type->type);
+                                  __FILE__,__LINE__, var->type->type);
                             return;
                         }
 
@@ -792,7 +802,7 @@ static void print_message_buffer_size(func_t *func, unsigned int *type_offset)
 
         default:
             error("%s:%d Unknown/unsupported type 0x%x\n",
-                  __FUNCTION__,__LINE__, func->def->type->type);
+                  __FILE__,__LINE__, func->def->type->type);
             return;
         }
 
@@ -1082,7 +1092,7 @@ static void unmarshall_in_arguments(func_t *func, unsigned int *type_offset)
 
                         default:
                             error("%s:%d Unknown/unsupported type 0x%x\n",
-                                  __FUNCTION__,__LINE__, var->type->type);
+                                  __FILE__,__LINE__, var->type->type);
                             return;
                         }
 
@@ -1170,7 +1180,7 @@ static void unmarshall_in_arguments(func_t *func, unsigned int *type_offset)
 
                     default:
                         error("%s:%d Unknown/unsupported type 0x%x\n",
-                              __FUNCTION__,__LINE__, var->type->type);
+                              __FILE__,__LINE__, var->type->type);
                         return;
                     }
 
@@ -1341,7 +1351,7 @@ static void marshall_out_arguments(func_t *func, unsigned int *type_offset)
 
                     default:
                         error("%s:%d Unknown/unsupported type 0x%x\n",
-                              __FUNCTION__,__LINE__, var->type->type);
+                              __FILE__,__LINE__, var->type->type);
                         return;
                     }
 
@@ -1442,7 +1452,7 @@ static void marshall_out_arguments(func_t *func, unsigned int *type_offset)
 
         default:
             error("%s:%d Unknown/unsupported type 0x%x\n",
-                  __FUNCTION__,__LINE__, def->type->type);
+                  __FILE__,__LINE__, def->type->type);
             return;
         }
 
@@ -1862,18 +1872,7 @@ static void write_function_stubs(type_t *iface)
             while (NEXT_LINK(var)) var = NEXT_LINK(var);
             while (var)
             {
-                switch (var->ptr_level)
-                {
-                case 0:
-                    if (is_base_type(var->type))
-                        proc_offset += 2;
-                    break;
-
-                case 1:
-                    if (is_base_type(var->type))
-                        proc_offset += 4;
-                    break;
-                }
+                proc_offset += get_var_proc_offset(var);
 
                 var = PREV_LINK(var);
             }
@@ -2024,6 +2023,7 @@ static int get_type_format_string_size(type_t *iface)
             while (var)
             {
                 size += get_var_type_offset(var);
+
                 var = PREV_LINK(var);
             }
         }
@@ -2053,20 +2053,7 @@ static int get_proc_format_string_size(type_t *iface)
             while (NEXT_LINK(var)) var = NEXT_LINK(var);
             while (var)
             {
-                switch (var->ptr_level)
-                {
-                case 0:
-                    if (is_base_type(var->type))
-                        size += 2;
-                    else if (var->type->type == RPC_FC_RP)
-                        size += 4;
-                    break;
-
-                case 1:
-                    if (is_base_type(var->type))
-                        size += 4;
-                    break;
-                }
+                size += get_var_proc_offset(var);
 
                 var = PREV_LINK(var);
             }
